Fix Horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ html{
     overflow-x: hidden;
 }
 body {
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     margin: 0;
